# stablecoin_arbi

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  ONBOARDING.md  README.md  backtest_engine.py  docker-compose.yml  docker-entrypoint.sh  fetch_data.py  pyproject.toml  requirements.txt  strategy.py  sweep.py
config/: strategy.yaml
data/: USD1USDT_1h.csv  USD1USDT_5m.csv  USDCUSDT_1h.csv  USDCUSDT_5m.csv  USDEUSDT_1h.csv  USDEUSDT_5m.csv  USDTBUSDT_1h.csv  USDTBUSDT_5m.csv
docs/: FINDINGS.md  METHODOLOGY.md  STRATEGY.md  config-consolidation-plan.md  conventions.md  decisions.md  engine-persist-resume-plan.md  live-bybit-readonly-r1-plan.md  phase3a-maker-orders-plan.md  phase3b-mainnet-canary-plan.md  strategy-audit-2026-06-20.md
experiments/: README.md  bt.py  bt_asym.py  bt_bigdip.py  bt_faithful.py  bt_ladder.py  bt_ladder2.py  bt_ladder3.py  bt_paal.py  bt_variant_r1_0.py  bt_variant_r1_1.py  bt_variant_r1_2.py  bt_variant_r1_3.py  bt_variant_r1_4.py  bt_variant_r1_5.py  bt_variant_r1_6.py  bt_variant_r1_7.py  bt_verify_r1_1.py  bt_verify_r1_2.py  bt_verify_r1_5.py  bt_verify_r1_6.py  bt_verify_r1_7.py  finalize.py  grid_variant.py  sweep2.py  sweep3.py  sweep_ladder.py  validate.py  workflow_optimize.js
reference/: ArbiStrategy.py  context_for_codex.md
scripts/: run.py
tests/: test_backtest_per_symbol.py  test_bitget_adapter.py  test_bitget_pnl_fee_agnostic.py  test_bybit_client.py  test_clean_shutdown.py  test_config_bitget_routing.py  test_config_exchange_for.py  test_config_max_alloc_for.py  test_config_runtime.py  (+38 more)
(+29 files in other folders)
